style: spring-cloud-alibaba-sentinel 简单运用

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>sentinel-induction</module>
+        <module>spring-cloud-alibaba-sentinel</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
