--- a/spring-cloud-alibaba-sentinel/pom.xml
+++ b/spring-cloud-alibaba-sentinel/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>sentinel-actuator</module>
+        <module>sentinel-nacos</module>
     </modules>
 
     <properties>
