style: sentinel-feign支持 和 rest支持

--- a/spring-cloud-alibaba-sentinel/pom.xml
+++ b/spring-cloud-alibaba-sentinel/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>sentinel-actuator</module>
         <module>sentinel-nacos</module>
+        <module>sentinel-feign</module>
     </modules>
 
     <properties>
