--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <modules>
         <module>sentinel-induction</module>
         <module>spring-cloud-alibaba-sentinel</module>
+        <module>sentinel-useGuide</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
